# Medipal

./: README.md  pyproject.toml  report.md  vapi.py
src/medipal/: crew.py  main.py
src/medipal/config/: agents.yaml  tasks.yaml
